--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -13,6 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
+        mpi: [ 'mpich', 'openmpi', 'intelmpi']
 
     steps:
     - uses: actions/checkout@v3
