--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,6 +18,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: mpi4py/setup-mpi@v1
+    - name: Install boost
+      uses: MarkusJx/install-boost@v1.0.1
+      id: install-boost
+      with:
+        boost_version: 1.73.0
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
