--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ['3.10']
         mpi: ['openmpi']
 
     steps:
@@ -26,8 +26,16 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Setup venv
+      run: |
+        python3 -m venv dune-env
+        source dune-env/bin/activate
+        pip install --upgrade pip
+        pip install matplotlib scipy gmsh nbconvert
+      shell: bash
     - name: Install dependencies
       run: |
+        source dune-env/bin/activate
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         python -m pip install .
@@ -39,4 +47,5 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
+        source dune-env/bin/activate
         pytest
