--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -49,4 +49,5 @@ jobs:
     - name: Test with pytest
       run: |
         source dune-env/bin/activate
-        pytest
+        cd ..
+        python -m pytest
