--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,14 +30,14 @@ jobs:
       run: |
         python3 -m venv dune-env
         source dune-env/bin/activate
-        pip install --upgrade pip
-        pip install matplotlib scipy gmsh nbconvert
+        python -m pip install --upgrade pip
+        python -m pip install matplotlib scipy gmsh nbconvert
+        python -m pip install flake8 pytest
       shell: bash
-    - name: Install dependencies
+    - name: Install mmdgpy
       run: |
         source dune-env/bin/activate
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
         python -m pip install .
     - name: Lint with flake8
       run: |
@@ -49,5 +49,5 @@ jobs:
     - name: Test with pytest
       run: |
         source dune-env/bin/activate
-        cd ..
+        cd ../test
         python -m pytest
