--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Python package
+name: Test
 
 on: [push, pull_request]
 
@@ -49,5 +46,4 @@ jobs:
     - name: Test with pytest
       run: |
         source dune-env/bin/activate
-        cd ../test
         python -m pytest
