--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,4 +46,5 @@ jobs:
     - name: Test with pytest
       run: |
         source dune-env/bin/activate
-        python -m pytest
+        python -m pytest test/test_dg.py
+        python -m pytest test/test_mmdg.py
